# AWFDRS

./: .bandit  .env.example  .gitignore  Dockerfile  FRONTEND_BACKEND_INTEGRATION.md  Makefile  QUICKSTART.md  README.md  SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
alembic/: env.py
config/rules/: error_codes.yaml  retry_policies.yaml  vendor_config.yaml
docs/: ARCHITECTURE.md  CONVENTIONS.md  METRICS.md  MIGRATION.md  TESTING.md
frontend/: IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  index.html
frontend/src/app/: App.tsx
frontend/src/app/api/: adapters.ts  client.ts  config.ts  errors.ts  index.ts  services.ts  types.ts
frontend/src/app/data/: mockData.ts
frontend/src/app/types/: index.ts
frontend/src/styles/: theme.css
scripts/: init_db.py  seed_data.py
src/awfdrs/: config.py  dependencies.py  main.py
src/awfdrs/actions/: README.md  __init__.py  escalation.py  executor.py  retry_coordinator.py  state_machine.py
src/awfdrs/ai/: README.md  __init__.py  decision_service.py
src/awfdrs/ai/agents/: detector.py  rca.py
src/awfdrs/ai/llm/: client.py
src/awfdrs/ai/similarity/: search.py
src/awfdrs/ai/vectorstore/: client.py
src/awfdrs/analysis/: README.md  __init__.py  correlator.py  incident_detector.py  incident_manager.py  signature.py
src/awfdrs/core/: README.md  enums.py  exceptions.py  logging.py  schemas.py  tracing.py
src/awfdrs/db/: README.md  base.py  session.py
src/awfdrs/db/models/: __init__.py  actions.py  decisions.py  events.py  incidents.py  kill_switches.py  tenants.py  (+2 more)
src/awfdrs/ingestion/: README.md  schemas.py  service.py  validators.py
src/awfdrs/safety/: README.md  __init__.py  circuit_breaker.py  limits.py  rate_limiter.py  rules_engine.py  schemas.py
tests/: conftest.py
tests/fixtures/: events.py
tests/integration/: test_ingestion_flow.py
tests/mocks/: mock_openai.py  mock_pinecone.py  mock_vendors.py
tests/unit/: test_rules_engine.py  test_signature.py
(+27 files in other folders)
